@@ -5,26 +5,28 @@ DIST libmicrohttpd-0.9.37.tar.gz 1168410 SHA256 a78cbcc050fb50f4ef4cf02709a3f8dd
 DIST libmicrohttpd-0.9.38.tar.gz 1195477 SHA256 8df2b4dd863c98799a4775a530d905363fbc02fec850af9094da890b28b9e721 SHA512 006c6ad1981d56655bad20a4ad09b9a6a11b44628f7cfbcd9fb7643ed0ba44930fa2d1b6cab5c38c28c8d3b2d2757e8f12657c13a60cdd0c4c1daff038945998 WHIRLPOOL 2c1ff2fc9fbd32d9476a61e74d91c9d440b2c300b04dc449782493fc2ef089dc6832f76c635a5eaf43a22d4daa86aae95ac67253b9f4e481b857d0ed83bdf2ac
 DIST libmicrohttpd-0.9.39.tar.gz 1205722 SHA256 4f937b6065c366d776be86b1d24b8fc400ebc7ea006a9d77c49a8f2f0cd7e373 SHA512 f7a526803fd5bbd28c817836340f91569542c3f8db6f04ffc8e60cf794cd5a7f1da3beda782fa80b2f6c07bb48cd09454c5bbcae1ad81b00f0df2985740a927a WHIRLPOOL a2dc5f2303bf7fd042d9f5ca58f946e0e506232870b00d7a7cb65127cc1769fdbc9a5b12145d47d7ab4d32d48ab6b311f320c350adbc071d18aae810156073c0
 DIST libmicrohttpd-0.9.40.tar.gz 1222222 SHA256 403d4d46a8690ad8382bd9f156be3eaf4e80869a75b39f03d48bbcb124c7b7a6 SHA512 69ac43a5fbed477b65c9abe8972a5a77ac03e28ffc9605a0b6c4a88d683ce58549b4599eda5706f48b4c5d98b53979265b4dbe153c2a0729d3ba354a61e23615 WHIRLPOOL 1bb3759b79c1add8c5944f961554437212d4200a165b4221bc718dab931567061bac44a739224a43bc8590fa087145d8128ba5ceb8636321966deb803d05a619
+DIST libmicrohttpd-0.9.41.tar.gz 1234550 SHA256 9798be637d4a1d76a377e1d805d142e6edcfd3ec99c443926448f647af1a7a7c SHA512 c87f4dad21d71a42522d779f2c75fb0e2b3da068350da7e3a31fc4cf6aea2e89da8f5418ef846f7e1e1d93e0b4f26dc6989d53e55842e5918e3cfde26badd037 WHIRLPOOL f6cf97cdd619637a18b09043c9a443168c8ed6b9b607f800355418520c10a19c9386a412ae57325d8948eaf98da491348299ade5099b786bcca402b207125de7
 EBUILD libmicrohttpd-0.9.37.ebuild 1180 SHA256 b342a5e5741b3b4239930a65df55838069e09128abdab0d010a6e09e439c6203 SHA512 1d5fcb56fdc89f2a444dddafbaa9ef0188d5e1647f93b193511cb1d554b74a34df1e8f3927e4c2bd6a2531adedfd73f38b679fa1c92bf30e74c6788c1c0dacb7 WHIRLPOOL 2aa85ca2172f8ce70e3970dd8d4f1c39c6f60dc073380bb4643172f258d4cd115208cd287eab13ae7767277f59d4baab16836fbb150db0fc64b007ddf94a09a4
 EBUILD libmicrohttpd-0.9.38.ebuild 1193 SHA256 c56da25880e61ee7ec8c6c8fc96f21b2fa77a8765d9bf33dabb78ef2895bac81 SHA512 ca8d1be83981261f01c22c669943997921a7c33946d064c5c1980d056286eb76c2ccfcf228943035bd1d57fde717fa18bfa8c5201fd2213bc5c6d6efefb097c8 WHIRLPOOL 9fb5efcf54a61769a7e56c6fa686e76de3447c440f3a21686d37b65c56c46f622922d7761fd9ae92fe720953747dbadf74ff8cacfd12c459f4633c1f6013ce2d
 EBUILD libmicrohttpd-0.9.39.ebuild 1179 SHA256 3d717b5226958404669fa4464c4feca3f091b6d7bd54ead6631225710a1d8a92 SHA512 90a6e9b94ab7a3f3bd6720dd518600396f9867f19cf9184564496afbeb2a492e150141c62f5a7e0351ede360e179105be47d560555fa97e46010926e8f25961c WHIRLPOOL 07584d1d803267a75e87e81664f10efcca14562061b0e2fb29257f43af4d1d60b56b7ecb1d26ea4591b96af9fb2b6460ee67c42d68c8843ef0a83f93c684e6b3
 EBUILD libmicrohttpd-0.9.40.ebuild 1193 SHA256 b6e8d536d3a9db459b6e49c5d78d15c4030898be8a26b2c9918c5b7880378266 SHA512 0d3d8c1a0069be03103ba4e4b52130c7541e49908378f232794dcc623f8e0e00cfa5d0cdc9ba33528af0e92c76187a02c490a8f19ca2bb20af281686980ba192 WHIRLPOOL 997f1c40520cdaac06ec7fe27cf6b8b3d98d2e17c6db72f6658077da50394d758473ee5a241e4cf51b7ac6d598cba0fc92303a230bd28ec74e6bf39175454730
-MISC ChangeLog 12935 SHA256 62dfed257f4046eed53f11e01fd9a638e5719fe75190d720d9a16eacf1e515d3 SHA512 3eab91c078882de2998ea156f6b92e117f79961f7fc76677760ffeebb7fd60267abcca86577a4ac9830e267d3cc1c0a5c05d15ad9468dd49806d9bfe45d25da3 WHIRLPOOL 76798cb3dbdfbecb36a48042bf3d2b7fc8a4b9986ad0193e4d83a9ef1102daf84404a918046e37798c29993d68a70f8b1adacdb039e03e72dd50031a8433828a
+EBUILD libmicrohttpd-0.9.41.ebuild 1193 SHA256 81b110006eed1da60d049098c41a1bd72ab814776f0ff7bb6a935e459214703b SHA512 7f43a90673e31d6e8c28909102d5b31660929a40aabcb50373a311d3c8f416caa2784a89a01c53a44ee8eb49393dd8d85c9086817b2d61678851c0a320d7a6be WHIRLPOOL c3418619ae49cf21f94eadddc34fc016d78c9318305bc90fe3baa3a51d65dbdc93a77afd8bd01deff653fe960704f6964eb122cac3a629af3fd6247562710660
+MISC ChangeLog 13081 SHA256 4ec611d07873d7e1ec15337954fc1866374b339135a005ee7572c7a3f51c9725 SHA512 a33308b050a6e2e5482b7970d469301b99b167cb0602a5de4c9388dce3db05810c4f739cbbc2b769c13bec2f1b3a17eb774472f5babfec62e88263760e9e546a WHIRLPOOL 6dd5324a6c9881afc5c04d362825b6e3505fa21498b8ddd93ff04e060f76262efe858cc4bc1b8efe929576abe147b98c3401bfc1b3ab879f0e2bcb8e4005ca4b
 MISC metadata.xml 359 SHA256 99f8013d4996905dc53e27191e9fff66c21e3b3ae2a912f14b9881b52689fcee SHA512 28d6502d6a724c5f63ab3c9b0917c7e513463b533bef7daa4c50256a6c1cf6c026897b21016f26eb2eaf999ed0b4c7561c9d59e6dcd33ef950466d394f9aacbe WHIRLPOOL bc31516b0cd0fa502b3463dbad6d7a5240f0d427086cde4189dd7cf6b3b1e58ca710398ebd4be4183e7f390dfb1420158d9758fabc8882abb45ef4b9bed8fc30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVP1byAAoJELp701BxlEWfBO8P/RLn+QpUZ24/ILmJgr2JsIkX
-W3UVMF1VSfzZ2v8GbmFMbVVP/JUeY3+4lBXvm2ymzxevFcNl57LVD/I0eXwuAr3U
-IIROXhgKY8veW+Kw155coa64ljqCCoMVv8dlCO3lmsoY0Y1xwEfSsfVNQ8sWMrxO
-qWQV34UxDUEBvwYLA1HjqqdlRYq7BViA32942NZmtt/rJGCtFf6xtD3BFgY2aPwA
-BtRG872ME7tqNdKDS8rxJOc+Axxd5eL3HCPhIFwU/sddQvoNO05VpGpxwvYm7mZO
-DherDxP1BVyomgjuxnuXRmXenxoeAuW4UpslAG2XKNMIOKDDDANXIF0Wgq9HGC8H
-atrbI3CIBxiT9eVuNXeHhMeSjCIKDkBDLMlLeYghmthKoh/RE5VD16K7N32C6RFd
-EtL0wl0JyhZxHLhek2Na7mbHmZn/pT/QibT91esHnfZ3n/jzMhWe4tl0PvsMm/Ci
-/Exm9urvmmPPA6fz02b48Ux2dccGDXGK+RuOKfMdPt4unRGiC/ER69kQAy1Cz+1B
-8CulkHo7VJD8UuNcpoamVBwKuSCONJBROKFAERuL7TBwwO0pf0O21AWFmTgts77Q
-NG2RxuRYkfNJ6AHgzDNdpcOMfJLm+lmSXzbF42GKcClg1zBkRR1uXszRu1trImWJ
-v5AZHm6GrOMOXQ0lFlRC
-=qA+5
+iQIcBAEBCAAGBQJVQhIKAAoJEJOE+m71LUu6138P/jal0us4BiujluMU4jPk9wjJ
+hcbhVK9SzlvMOMDBhn0J1UN3K8weJke5bhzHo+XU1d1NSH74DjfYJ6pLgtDxB8q7
+zv6RltlkJsjESYVKYwKUGuJc1wce3Ll8TFLl1B7JbKkCUXUgVG5nhxGReiXoIcJ4
+6z+cLt5amG1CRshAxEyTmmlCJF+iPw3I72JLuEjf/OQDdEG59TJ7puT4nu0avahM
+2GWaEe5DXVebf/Sf2scpnv6W+55HR1BCRxQnDCHOG5bZttqyR7hBWH/Yrmp5tzK9
+3llnzwgWMP04CVf0GYAdtCPO2DfsEhn9lTJMo6gI1LpzZ7vpi3DcyTkiYdkJa4p4
+Vwadxh/uesgWpXs6jCSzmOs/yzTl/dDHDv6L4cqGQKsLfgvMe8P2UODYezN1DCVV
+QLd8bdstYt9FgH7JkgP1vvXOWFa+LTEWE3ok81SchJTKD6QLtFc9h1mRa6OZ5pTl
+EmQMExtzc/M+cZUzCSggzRpFGKlbNxP/DDxIM+VCJEL4566/+CPt1Q60Ah+gC/Kt
+AClXVM27pv7Xb2pFbRZrdrwSsqThtrakNicU5WFdDa/wRtBO7LptsIbV3Pf9mfg3
+mu5ciqSLyEHNWvFTXuHsHXKFn+/SIyDnw3hjV0Qup3pQ06EItTgggprBMRExQuTp
+B8JCgp8FNeU5zbOLfIb7
+=oWqh
 -----END PGP SIGNATURE-----
