@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libmicrohttpd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.90 2015/04/28 09:46:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.91 2015/04/30 11:27:48 blueness Exp $
+
+*libmicrohttpd-0.9.41 (30 Apr 2015)
+
+  30 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
+  +libmicrohttpd-0.9.41.ebuild:
+  Version bump.
 
   28 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.39.ebuild:
   Stable for sparc, wrt bug #545814
